Closed Bug 1761374 Opened 2 years ago Closed 2 years ago

Focus state isn't correct after switching focus to an oop iframe and then immediately switching back

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

defect

Tracking

()

VERIFIED FIXED
100 Branch
Tracking Status
firefox100 --- verified

People

(Reporter: edgar, Assigned: edgar)

References

Details

Attachments

(1 file)

Found this while investigating bug 1757531.

STR:

  1. load https://codepen.io/edgarchen-the-decoder/full/zYpNaQy
  2. click the green area

Expected result:
green area is focused then background color become to red.

Actual result:
green area is not focused.

Assignee: nobody → echen
Attachment #9269311 - Attachment description: Bug 1761374 - Check action id for focus adjustement; → Bug 1761374 - Check action id for focus adjustment;
Blocks: 1757531
See Also: → 1759672
Pushed by echen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/723c1f58a70d
Check action id for focus adjustment; r=hsivonen
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/33383 for changes under testing/web-platform/tests
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 100 Branch
Upstream PR merged by moz-wptsync-bot
Regressions: 1761742
QA Whiteboard: [qa-100b-p2]

I managed to reproduce this on Firefox 98.0(20220304153049) on macOS 11. Verified as fixed on Firefox 100.0(20220428192727) and Nightly 101.0a1(20220501190841) on macOS 11, Win10 64-bits and Ubuntu 20.04.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-100b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: