Bug 1761374 - Check action id for focus adjustment; r=hsivonen

Differential Revision: https://phabricator.services.mozilla.com/D142012